--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mmH-tT-H3s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mmH-tT-H3s">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
@@ -394,33 +394,36 @@
                                                             <rect key="frame" x="21" y="77.5" width="372" height="126.5"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JAr-hd-SqQ">
-                                                                    <rect key="frame" x="25" y="37" width="48.5" height="56.5"/>
+                                                                    <rect key="frame" x="23" y="37" width="49" height="56.5"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tb9-U6-0kD">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="48.5" height="19.5"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="49" height="19.5"/>
                                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                                             <color key="textColor" red="0.55686277149999996" green="0.62745100259999997" blue="0.81176471709999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모집인원" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdH-yw-2rW">
-                                                                            <rect key="frame" x="0.0" y="39.5" width="48.5" height="17"/>
+                                                                            <rect key="frame" x="0.0" y="39.5" width="49" height="17"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="49" id="qaZ-lr-U7t"/>
+                                                                    </constraints>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1ph-hD-NdO">
-                                                                    <rect key="frame" x="133.5" y="37" width="102.5" height="56.5"/>
+                                                                    <rect key="frame" x="132" y="37" width="106" height="56.5"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오전 02:30" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdQ-hV-Rqv">
-                                                                            <rect key="frame" x="12" y="0.0" width="78.5" height="19.5"/>
+                                                                            <rect key="frame" x="14" y="0.0" width="78.5" height="19.5"/>
                                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                                             <color key="textColor" red="0.55686277149999996" green="0.62745100259999997" blue="0.81176471709999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주문시간" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pi-fK-gUH">
-                                                                            <rect key="frame" x="27" y="39.5" width="48.5" height="17"/>
+                                                                            <rect key="frame" x="29" y="39.5" width="48.5" height="17"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -428,7 +431,7 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Qvx-In-gyh">
-                                                                    <rect key="frame" x="298.5" y="37" width="48.5" height="56.5"/>
+                                                                    <rect key="frame" x="300.5" y="37" width="48.5" height="56.5"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="돈까스" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rju-4b-ljd" userLabel="Category Label">
                                                                             <rect key="frame" x="0.0" y="0.0" width="48.5" height="19.5"/>
@@ -449,11 +452,11 @@
                                                             <constraints>
                                                                 <constraint firstItem="1ph-hD-NdO" firstAttribute="top" secondItem="EqQ-ei-7gP" secondAttribute="top" constant="37" id="9Oz-kF-ale"/>
                                                                 <constraint firstItem="Qvx-In-gyh" firstAttribute="leading" secondItem="1ph-hD-NdO" secondAttribute="trailing" constant="62.5" id="CRT-Tu-CuD"/>
-                                                                <constraint firstItem="JAr-hd-SqQ" firstAttribute="leading" secondItem="EqQ-ei-7gP" secondAttribute="leading" constant="25" id="JoO-iI-1QA"/>
+                                                                <constraint firstItem="JAr-hd-SqQ" firstAttribute="leading" secondItem="EqQ-ei-7gP" secondAttribute="leading" constant="23" id="JoO-iI-1QA"/>
                                                                 <constraint firstAttribute="bottom" secondItem="Qvx-In-gyh" secondAttribute="bottom" constant="33" id="Qvg-ra-8ir"/>
                                                                 <constraint firstItem="Qvx-In-gyh" firstAttribute="top" secondItem="EqQ-ei-7gP" secondAttribute="top" constant="37" id="bZB-zQ-Qu4"/>
                                                                 <constraint firstAttribute="bottom" secondItem="JAr-hd-SqQ" secondAttribute="bottom" constant="33" id="hZB-tf-Tou"/>
-                                                                <constraint firstAttribute="trailing" secondItem="Qvx-In-gyh" secondAttribute="trailing" constant="25" id="iDc-6a-yCx"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Qvx-In-gyh" secondAttribute="trailing" constant="23" id="iDc-6a-yCx"/>
                                                                 <constraint firstItem="1ph-hD-NdO" firstAttribute="leading" secondItem="JAr-hd-SqQ" secondAttribute="trailing" constant="60" id="pO5-Wo-Ogb"/>
                                                                 <constraint firstAttribute="bottom" secondItem="1ph-hD-NdO" secondAttribute="bottom" constant="33" id="w1Z-h0-u9o"/>
                                                                 <constraint firstItem="JAr-hd-SqQ" firstAttribute="top" secondItem="EqQ-ei-7gP" secondAttribute="top" constant="37" id="wGy-hm-f4J"/>
@@ -899,7 +902,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4pw-4M-b96">
-                                <rect key="frame" x="24" y="88.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="44.5" width="366" height="40"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dYk-ej-KJO">
                                         <rect key="frame" x="0.0" y="0.0" width="278" height="40"/>
@@ -931,14 +934,14 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIi-fv-2AU">
-                                <rect key="frame" x="30" y="64" width="31.5" height="14.5"/>
+                                <rect key="frame" x="30" y="20" width="31.5" height="14.5"/>
                                 <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJ4-xb-8ID">
-                                <rect key="frame" x="24" y="153.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="109.5" width="366" height="40"/>
                                 <color key="backgroundColor" red="0.5568627451" green="0.62745098040000002" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="pqz-lM-MnS"/>
